--- a/EXERCISES/lesson20-exoticar-tranviet-fixed/scss/_header.scss
+++ b/EXERCISES/lesson20-exoticar-tranviet-fixed/scss/_header.scss
@@ -1,4 +1,5 @@
 /* PAGE HEADER */
+@import './utils';
 .page-header {
     width: 100%;
     height: 66px;
@@ -6,9 +7,7 @@
     opacity: 0.8;
 
     .wrapper {
-        width: 1120px;
-        height: 100%;
-        margin: 0 auto;
+        @include wrapper-props;
     }
 
     .logo {
